# vendee-globe-api

./: README.md  TODO.md  config.yaml.example  explanations_code.md  main.py  pyproject.toml
data/: df_infos.parquet  df_race.parquet  vendee_globe.sqlite
src/vendee_globe_api/: __init__.py  config.py  constants.py  data_analyse.ipynb  data_prep.py  main.py  models.py  utils.py
src/vendee_globe_api/data_prep/: data_analyse.ipynb  data_prep.py  parquet_to_sqlite.py
src/vendee_globe_api/db/: crud.py  models.py  session.py
src/vendee_globe_api/models/: boat.py  race.py
